--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -221,41 +221,41 @@
 
                                         <p class="people-more section-content-more">
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/achal-kaundinya-2a222a127/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/achal-kaundinya-2a222a127/" target="_blank">
                                                 <img alt="Achal Kaundinya" class="human grayscale" src="assets/Achal.jpg" />
                                             </a>
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/bharat-ganesh-01042053/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/bharat-ganesh-01042053/" target="_blank">
                                                 <img alt="Bharat Ganesh" class="human grayscale" src="assets/Bharat.jpg" />
                                             </a>
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/darshanputtannaiah/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/darshanputtannaiah/" target="_blank">
                                                 <img alt="Darshan Puttanaiha" class="human grayscale" src="assets/Darshan.jpg" />
                                             </a>
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/disha-suresh-062998a0/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/disha-suresh-062998a0/" target="_blank">
                                                 <img alt="Disha Suresh" class="human grayscale" src="assets/Disha.jpg" />
                                             </a>
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/kratik-nayak-a75012b6/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/kratik-nayak-a75012b6/" target="_blank">
                                                 <img alt="Kratik Nayak" class="human grayscale" src="assets/Kratik.jpg" />
                                             </a>
 
                                             <br>
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/krishna-m-v-89a349137/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/krishna-m-v-89a349137/" target="_blank">
                                                 <img alt="Krishna MV" class="human grayscale" src="assets/Krishna.jpg" />
                                             </a>
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/nikhil-vallishayee-81990615/" target="_blank">
                                                 <img alt="Nikhil V V" class="human grayscale" src="assets/Nik.jpg" />
                                             </a>
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/shyamal-bhat-65645796/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/shyamal-bhat-65645796/" target="_blank">
                                                 <img alt="Shymal Bhatt" class="human grayscale" src="assets/Shyamal.jpg" />
                                             </a>
 
-                                            <a class="person-link" href="https://www.linkedin.com/in/vikram-devaiah-39156976/" target="_blank">
+                                            <a class="person-link IP_person" href="https://www.linkedin.com/in/vikram-devaiah-39156976/" target="_blank">
                                                 <img alt="Vikram" class="human grayscale" src="assets/Vikram.jpg" />
                                             </a>
                                         </p>
