--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -289,7 +289,7 @@ b {
         bottom: 0;
         left: -27%;
     }
-    .about_content{
+    .about_content {
         font-size: 11px;
         letter-spacing: -1px;
         line-height: 10.5px !important;
@@ -302,28 +302,45 @@ b {
     .about_icon {
         font-size: 16px !important;
     }
-    .other_content{
+    .other_content {
         font-size: 11px;
     }
-    .IP_button{
+    .IP_button {
         padding: 0px 20px !important;
     }
-    .career_button{
+    .career_button {
         padding: 0px 10px !important;
     }
-    .IP_form{
+    .IP_form {
         line-height: 0.5;
     }
-    .IP_logo{
+    .IP_logo {
         height: 50px !important;
         top: 10vh !important;
     }
-    .section-content-more{
+    .section-content-more {
         padding-top: 0 !important;
         margin-top: -3% !important;
     }
-    .human{
+    .human {
         margin: 0px !important;
     }
 }
 
+.mobile-menu {
+    padding-top: 15px;
+    /*overflow-y: auto;*/
+}
+
+@media (max-width: 991px) {
+    .mobile-menu {
+        position: fixed;
+        top: 0;
+        width: 240px;
+        left: -243px;
+        z-index: 100;
+        height: 100%;
+        box-shadow: 3px 0 5px rgba(0, 0, 0, 0.23);
+        background-color: #fff;
+    }
+}
