--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -14,7 +14,7 @@
                         <div class="container clearfix nomargin nopadding" style="width:100%">
                             <div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
                             <nav id="primary-menu">
-                                <ul class="ip_nav" style="display: flex;flex-direction: column; height: 50vh width:200px; ">
+                                <ul class="ip_nav mobile-menu" style="display: flex;flex-direction: column; height: 50vh ;width:200px; ">
                                     <li><a class="blink" href="#baba" style="color: #3AFF00">BabaG</a>
                                     </li>
                                     <li><a href="#about">About</a>
