--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -12,20 +12,23 @@
                 <header id="header" class=" header transparent side-header-right" style="background:transparent !important;position: fixed; top: 5vh; height:50vh; width:10vw; right:10vw; z-index: 1000;">
                     <div id="header-wrap" style="background:transparent">
                         <div class="container clearfix nomargin nopadding" style="width:100%">
-                            <div id="primary-menu-trigger" style="pointer-events:auto;"><i class="icon-reorder"></i></div>
-                            <nav id="primary-menu">
-                                <ul class="ip_nav mobile-menu" style="display: flex;flex-direction: column; height: 50vh">
-                                    <li><a class="blink" href="#baba" style="color: #3AFF00">BabaG</a>
-                                    </li>
-                                    <li><a href="#about">About</a>
-                                    </li>
-                                    <li><a href="#people">People</a>
-                                    </li>
-                                    <li><a href="#careers">Careers</a>
-                                    </li>
-                                    <li><a href="#contact">Contact</a></li>
-                                </ul>
-                            </nav>
+                            <div id="primary-menu-trigger" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="pointer-events:auto;"><i class="icon-reorder"></i></div>
+                            <div class="collapse navbar-collapse" id="myNavbar">
+                                <nav id="primary-menu" class="navbar">
+
+                                    <ul class="ip_nav nav navbar-nav" style="display: flex;flex-direction: column; height: 50vh">
+                                        <li><a class="blink" href="#baba" style="color: #3AFF00">BabaG</a>
+                                        </li>
+                                        <li><a href="#about">About</a>
+                                        </li>
+                                        <li><a href="#people">People</a>
+                                        </li>
+                                        <li><a href="#careers">Careers</a>
+                                        </li>
+                                        <li><a href="#contact">Contact</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
                         </div>
                     </div>
                 </header>
