--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -10,12 +10,14 @@ body .secondary_cta,
 #primary-menu ul li a {
     pointer-events: auto;
 }
+
 #primary-menu {
-  position: relative;
-  min-height: 50px;
-  margin-bottom: 20px;
-  border: 1px solid transparent;
+    position: relative;
+    min-height: 50px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
 }
+
 .ip_nav li a {
     line-height: 3.5vh !important;
     height: 3.5vh !important;
@@ -53,6 +55,12 @@ body .secondary_cta,
     visibility: visible;
     opacity: 1;
     transition: visibility .1s, opacity 1.2s linear;
+}
+
+
+.icon-reorder {
+    line-height: 21vh !important;
+    margin-left: 4vw !important;
 }
 
 .secondary_cta_container {
@@ -221,8 +229,6 @@ b {
     font-family: 'Cardo', serif;
 }
 
-
-
 @keyframes blink {
     0% {
         opacity: 1;
@@ -333,4 +339,3 @@ b {
         margin: 0px !important;
     }
 }
-
