--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -16,7 +16,7 @@
                             <div class="collapse navbar-collapse" id="myNavbar">
                                 <nav id="primary-menu" class="navbar">
 
-                                    <ul class="ip_nav nav navbar-nav" style="display: flex;flex-direction: column; height: 50vh">
+                                    <ul class="ip_nav" style="display: flex;flex-direction: column; height: 50vh">
                                         <li><a class="blink" href="#baba" style="color: #3AFF00">BabaG</a>
                                         </li>
                                         <li><a href="#about">About</a>
