--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -37,7 +37,7 @@
 
                         <div id="simple" style="background: white;perspective: 5500px !important;">
 
-                            <div id="home" class="step nomargin" data-x="10000"  data-scale="15">
+                            <div id="home" class="step nomargin" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -59,7 +59,7 @@
                                 </div>
                             </div>
 
-                            <div id="baba" class="step" data-x="10000"  data-rotate-x="90" data-scale="15">
+                            <div id="baba" class="step" data-rotate-x="90" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -116,7 +116,7 @@
                                 </div>
                             </div>
 
-                            <div id="about" class="step" data-x="10000"  data-rotate-x="90" data-rotate-y="90" data-scale="15">
+                            <div id="about" class="step" data-rotate-x="90" data-rotate-y="90" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 40vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
@@ -204,7 +204,7 @@
                                 </div>
                             </div>
 
-                            <div id="people" class="step" data-x="10000"  data-rotate-x="90" data-rotate-y="180" data-scale="15">
+                            <div id="people" class="step" data-rotate-x="90" data-rotate-y="180" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -269,7 +269,7 @@
                                 </h2>
                             </div>
 
-                            <div id="careers" class="step" data-x="10000"  data-rotate-x="90" data-rotate-y="270" data-scale="15">
+                            <div id="careers" class="step" data-rotate-x="90" data-rotate-y="270" data-scale="15">
 
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
 
@@ -344,7 +344,7 @@
                                 </div>
                             </div>
 
-                            <div id="contact" class="step" data-x="10000"  data-rotate-x="180" data-scale="15">
+                            <div id="contact" class="step" data-rotate-x="180" data-scale="15">
                                 <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 25vh;background: white">
 
                                     <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
