--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -39,9 +39,9 @@
 
                             <div id="home" class="step nomargin" data-scale="15">
 
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+                                <div id = "IP_top" class="col_full center nomargin nopadding" style="">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                    <div id ="text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
 
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
                                             <div class="heroimage"></div>
@@ -61,9 +61,9 @@
 
                             <div id="baba" class="step" data-rotate-x="90" data-scale="15">
 
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+                                <div id = "IP_top" class="col_full center nomargin nopadding" style="">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                    <div id ="text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
                                             <div class="babag"></div>
                                             <div class="heroimage"></div>
@@ -117,9 +117,9 @@
                             </div>
 
                             <div id="about" class="step" data-rotate-x="90" data-rotate-y="90" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 40vh;background: white">
+                                <div id ="IP_top" class="col_full center nomargin nopadding" style=" ">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                    <div id ="text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
                                             <div class="heroimage">
 
@@ -206,11 +206,11 @@
 
                             <div id="people" class="step" data-rotate-x="90" data-rotate-y="180" data-scale="15">
 
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+                                <div id ="IP_top" class="col_full center nomargin nopadding" style=" ">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                    <div id ="text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
-                                            <div class="heroimage"></div>
+                                            <div id ="fireimage" class="heroimage"></div>
                                             <p class="other_content" style="">
                                                 <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i>
                                             </p>
@@ -271,12 +271,12 @@
 
                             <div id="careers" class="step" data-rotate-x="90" data-rotate-y="270" data-scale="15">
 
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 50vh;background: white">
+                                <div id ="IP_top" class="col_full center nomargin nopadding" style=" ">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                    <div id ="text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
 
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
-                                            <div class="heroimage"></div>
+                                            <div id="fireimage" class="heroimage" style=""></div>
 
                                             <p class="other_content">
                                                 <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.<br> Vivamus venenatis metus ut augue sollicitudin, id eleifend libero pretium.<br>Curabitur euismod imperdiet nisi, vel luctus sapien pharetra at.</i>
@@ -345,9 +345,9 @@
                             </div>
 
                             <div id="contact" class="step" data-rotate-x="180" data-scale="15">
-                                <div class="col_full center nomargin nopadding" style=" display: flex;flex-direction: column-reverse;justify-content: space-between; min-height: 25vh;background: white">
+                                <div id = "IP_contact" class="col_full center nomargin nopadding" style="">
 
-                                    <div class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
+                                    <div id ="contact_text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
                                             <div class="heroimage"></div>
                                             <p class="IP_subheading" style="font-size:15px;">
