--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -67,7 +67,7 @@
                                     <img src="/assets/BabaG.png" class="babag">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200;">
                                             <!-- <div class="babag"></div> -->
-                                            <div class="heroimage"></div>
+                                            <!-- <div class="heroimage"></div> -->
                                             <b class="IP_heading" style="">BabaG</b><br><i class="IP_subheading" style="">Namma smart friend!</i>
                                             <br>
                                             <a href="https://www.facebook.com/babaglive/" target="_blank"> <i class="col icon-facebook-sign" style="font-size:30px;color:#3b5998;"></i></a>
@@ -350,7 +350,7 @@
 
                                     <div id ="contact_text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
                                         <h2 class=" herotext" style="background: transparent;  font-weight: 200; text-align: left">
-                                            <div class="heroimage"></div>
+                                            <!-- <div class="heroimage"></div> -->
                                             <p class="IP_subheading" style="font-size:15px;">
                                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Quisque sit amet lorem vitae tellus vulputate posuere quis sed arcu.
                                             </p>
