--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -224,8 +224,16 @@ b {
 
 }
 
+.form-control{
+    width: 50% !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    font-size: 16px;
+    color: #000000 !important;
+}
+
 .blink {
-    animation-duration: 3000ms;
+    animation-duration: 1000ms;
     animation-name: blink;
     animation-iteration-count: infinite;
     /*animation-direction: alternate;*/
