--- a/app/views/contacts/update.js.erb
+++ b/app/views/contacts/update.js.erb
@@ -1,1 +1,1 @@
-$("#new_contact").html("<div><h3 class = 'display-1' style='text-align:center; color:black'>Thank you for Contacting us.<br> We will get back to you as soon ass possible.</h3></div>");
+$("#new_contact").html("<div><h3 class = 'display-1' style='text-align:center; color:black'><br><br><br><br>Thank you for Contacting us.<br> We will get back to you as soon ass possible.</h3></div>");
