--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -298,7 +298,7 @@ b {
     }
 }*/
 
-/*@media screen and (max-width: 800px) {
+@media screen and (max-width: 800px) {
     .secondary_cta_container {
         padding-top: 5vh;
     }
@@ -318,7 +318,7 @@ b {
         line-height: 25px !important;
         height: 30px !important;
     }
-}*/
+}
 
 @media screen and (max-width: 500px) {
     .herotext::before {
