added the babaG link to babaG logo

--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -86,7 +86,7 @@
                                 <div id = "IP_top" class="col_full center nomargin nopadding" style="">
 
                                     <div id ="text" class="center divcenter row clearfix commonheight leftmargin-sm" style=" ">
-                                    <img src="/assets/BabaG.png" class="babag">
+                                      <a href="https://www.babag.com/"> <img src="/assets/BabaG.png" class="babag"> </a>
                                         <h2 class=" herotext" style="">
                                             <!-- <div class="babag"></div> -->
                                             <!-- <div class="heroimage"></div> -->
