--- a/app/views/welcome/jmpress.html.erb
+++ b/app/views/welcome/jmpress.html.erb
@@ -3,7 +3,6 @@
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 <link rel="shortcut icon" type="image/png" href="/assets/favicon.png">
 </head>
-<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Playball|Cardo|Cantarell:400i" rel="stylesheet">
 <body class="stretched ">
     <div id="wrapper" class=" fallback-message clearfix" style="background: transparent;">
         <!-- Logo of the page -->
@@ -27,7 +26,7 @@
                         <nav id="primary-menu" class="navbar">
 
                             <ul class="ip_nav" style="display: flex;flex-direction: column; height: 50vh">
-                                <li><a class="blink" href="#baba" style="color: #3AFF00">BabaG</a>
+                                <li><a class="blink" href="#baba" style="color: #3aff00">BabaG</a>
                                 </li>
                                 <li><a href="#about">About</a>
                                 </li>
