--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -300,36 +300,36 @@ b {
 .IP_heading {
     text-align: right;
     font-size: 50px;
-    font-family: 'Playfair Display', serif;
+    font-family: 'arial';
 }
 
 .IP_subheading {
     text-align: center;
-    font-size: 35px;
-    font-family: 'Cantarell', sans-serif;
+    font-size: 30px;
+    font-family: 'arial';
 }
 
 .IP_content {
     color: black;
-    font-weight: 200;
-    font-size: 25px;
-    font-family: 'Playball', cursive;
+    /*font-weight: 200;*/
+    font-size: 20px;
+    font-family: 'arial';
 }
 
 .about_content {
     text-align: left;
-    font-family: 'Cardo', serif;
+    font-family: 'arial';
 }
 
 .about_heading {
-    font-family: museo-sans-condensed;
+    font-family: 'arial';
     letter-spacing: 1px;
 }
 
 .other_content {
     text-align: left;
     font-size: 15px;
-    font-family: 'Cardo', serif;
+    font-family: 'arial';
 }
 
 @keyframes blink {
